; ModuleID = '/home/carl/AnghaBench/obs-studio/libobs/extr_obs-properties.c_obs_property_int_min.c'
source_filename = "/home/carl/AnghaBench/obs-studio/libobs/extr_obs-properties.c_obs_property_int_min.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.int_data = type { i32 }

@OBS_PROPERTY_INT = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @obs_property_int_min(i32* %0) #0 {
  %2 = alloca i32*, align 8
  %3 = alloca %struct.int_data*, align 8
  store i32* %0, i32** %2, align 8
  %4 = load i32*, i32** %2, align 8
  %5 = load i32, i32* @OBS_PROPERTY_INT, align 4
  %6 = call %struct.int_data* @get_type_data(i32* %4, i32 %5)
  store %struct.int_data* %6, %struct.int_data** %3, align 8
  %7 = load %struct.int_data*, %struct.int_data** %3, align 8
  %8 = icmp ne %struct.int_data* %7, null
  br i1 %8, label %9, label %13

9:                                                ; preds = %1
  %10 = load %struct.int_data*, %struct.int_data** %3, align 8
  %11 = getelementptr inbounds %struct.int_data, %struct.int_data* %10, i32 0, i32 0
  %12 = load i32, i32* %11, align 4
  br label %14

13:                                               ; preds = %1
  br label %14

14:                                               ; preds = %13, %9
  %15 = phi i32 [ %12, %9 ], [ 0, %13 ]
  ret i32 %15
}

declare dso_local %struct.int_data* @get_type_data(i32*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
